<resources>
    <string name="app_name">ShoutOut</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_organization">Select Organization</string>
    <string name="username_name_of_organization">Username/Name of organization</string>
    <string name="select_type">Select Type</string>
    <string name="name">Name</string>
    <string name="get_started">get started</string>
    <string name="shoutout">ShoutOut</string>
    <string name="point">.</string>
    <string name="feed">Feed</string>
    <string name="sign_out_title">Sign out</string>
    <string name="sign_out_body">Are you sure you want to sign out?</string>
    <string name="sign_out_positive">Yes</string>
    <string name="sign_out_negative">Cancel</string>
    <string name="title">Title</string>
    <string name="add_image">Add Image</string>
    <string name="post">post</string>
    <string name="content">Content</string>
    <string name="edit_history"><u>Edit History</u></string>
    <string name="post_details">Post Details</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="update">update</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="post_analytics">Post Analytics</string>
    <string name="edit_post_analytics">Edit Post/Analytics</string>
    <string name="reply">Reply</string>
    <string name="add_a_reply">Add a Reply</string>
    <string name="emoji1">&#128077;</string>
    <string name="emoji2">&#128150;</string>
    <string name="emoji3">&#128558;</string>
    <string name="emoji4">&#128514;</string>
    <string name="emoji5">&#128549;</string>
    <string name="add_post">Add Post</string>
    <string name="null_exception">null fetched</string>
    <string name="nullException">null value</string>
    <string name="required">required field</string>
    <string name="club">Club</string>
    <string name="dept">Department</string>
    <string name="RegAssoc">Regional Assoc</string>
    <string name="genBody">General Body</string>
    <string name="sign_in_success">sign in successful</string>
    <string name="sign_in_unsucessful">sign in unsuccessful</string>
    <string name="bits_account">Use a bits account to login</string>
    <string name="null_editable">null editable</string>
    <string name="action">Action</string>
    <string name="deletePost">Delete Post?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>