<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.add.AddPostFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameTitleLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/post_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/post_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/addImageButton"
                app:layout_constraintEnd_toEndOf="@id/usernameTitleLayout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/usernameTitleLayout"
                app:layout_constraintTop_toBottomOf="@+id/usernameTitleLayout" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/addImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/add_image"
                app:icon="@drawable/ic_baseline_image_24"
                app:layout_constraintBottom_toTopOf="@+id/usernameMatterLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/post_image" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameMatterLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:counterEnabled="true"
                app:counterMaxLength="200"
                app:errorEnabled="true"
                app:layout_constraintBottom_toTopOf="@+id/addPost"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addImageButton">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Matter_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/content"
                    android:minHeight="100dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/addPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/post"
                app:icon="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameMatterLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>