<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textHead"
        style="@style/TextToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/post_details"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textHead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textHead" />

    <ImageButton
        android:id="@+id/menuButton"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorTransparent"
        android:src="@drawable/ic_action_menu"
        app:layout_constraintBottom_toBottomOf="@id/textHead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textHead" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/postCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textHead">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textHead">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="CRUx Inductions" />


                <ImageView
                    android:id="@+id/featured_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_text"
                    tools:src="@drawable/speaker100" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/postAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/featured_image"
                    tools:text="CRUx" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/point1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/point"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/postAuthor"
                    app:layout_constraintStart_toEndOf="@id/postAuthor"
                    app:layout_constraintTop_toTopOf="@id/postAuthor" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/post_date_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/point1"
                    app:layout_constraintTop_toBottomOf="@id/featured_image"
                    tools:text="29 Jan-21" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/point2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/point"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/postAuthor"
                    app:layout_constraintStart_toEndOf="@id/post_date_text"
                    app:layout_constraintTop_toTopOf="@id/postAuthor" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/author_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@id/point2"
                    app:layout_constraintTop_toBottomOf="@id/featured_image"
                    tools:text="Department" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/matter_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/colorBlack"
                    app:layout_constraintBottom_toTopOf="@+id/editHistoryButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/post_date_text"
                    tools:text="Selected students from round 1 blah blah blah" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/commentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@id/commentsRecycler"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/matter_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="@string/edit_history"
                    app:layout_constraintBottom_toBottomOf="@id/commentText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/commentText" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentsRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toTopOf="@id/edittextComments"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addCommentButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/ic_baseline_send_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/edittextComments" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edittextComments"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="24dp"
                    android:maxWidth="150dp"
                    app:prefixTextColor="@color/secondaryDarkColor"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintCircleRadius="25dp"
                    app:layout_constraintEnd_toStartOf="@id/addCommentButton"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/commentEdit"
                        android:hint="@string/add_a_comment"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>